--- a/app/src/main/res/layout/activity_confirmarpractica.xml
+++ b/app/src/main/res/layout/activity_confirmarpractica.xml
@@ -136,6 +136,15 @@
 
             />
 
+        <TextView
+            android:id="@+id/txtId"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textSize="20sp"
+            android:gravity="center"
+            />
+
     </LinearLayout>
 
 </LinearLayout>
