--- a/app/src/main/res/layout/activity_frame_crearcuenta.xml
+++ b/app/src/main/res/layout/activity_frame_crearcuenta.xml
@@ -14,7 +14,7 @@
             android:layout_height="100dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
-            android:src="@drawable/logo_azul" />
+            android:src="@mipmap/logo_azul" />
 
         <ProgressBar
             android:id="@+id/progressBar_registro"
