--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,13 +7,23 @@
     android:background="@drawable/fondo"
     tools:context=".LoginActivity">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="184dp"
+        android:layout_height="125dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/logo_pq" />
+
 
     <EditText
         android:id="@+id/txtUser"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="78dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginHorizontal="55dp"
+        android:layout_marginTop="99dp"
+        android:backgroundTint="@color/Azul_marino"
         android:ems="10"
         android:hint="@string/user"
         android:inputType="textPersonName"
@@ -28,8 +38,9 @@
         android:id="@+id/txtLogPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="78dp"
+        android:layout_marginHorizontal="55dp"
         android:layout_marginTop="33dp"
+        android:backgroundTint="@color/Azul_marino"
         android:ems="10"
         android:hint="@string/pass"
         android:inputType="textPassword"
@@ -43,7 +54,7 @@
         android:id="@+id/btnIniciarSession"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_marginHorizontal="78dp"
+        android:layout_marginHorizontal="55dp"
         android:layout_marginTop="42dp"
         android:background="@drawable/border_radious"
         android:backgroundTint="@color/white"
@@ -59,8 +70,9 @@
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="260dp"
+        android:layout_width="match_parent"
         android:layout_height="52dp"
+        android:layout_marginHorizontal="55dp"
         android:layout_marginTop="25dp"
         android:background="@drawable/border_radious"
         android:backgroundTint="@color/celeste_google"
@@ -89,30 +101,21 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.251" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="190dp"
-        android:layout_height="125dp"
-        android:layout_marginTop="104dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo_azul" />
+
 
     <Button
         android:id="@+id/btnIrRegister"
         android:layout_width="120dp"
         android:layout_height="50dp"
-        android:layout_marginStart="76dp"
+        android:layout_marginStart="55dp"
         android:layout_marginTop="40dp"
-        android:background=""
+        android:background="@android:color/transparent"
         android:onClick="register"
         android:text="Crear cuenta"
+        android:textAlignment="textStart"
         android:textColor="@color/white"
         android:textSize="10dp"
         android:textStyle="bold"
-        android:textAlignment="textStart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button4"
@@ -123,16 +126,17 @@
         android:layout_width="120dp"
         android:layout_height="50dp"
         android:layout_marginTop="40dp"
-        android:background=""
+        android:layout_marginEnd="55dp"
+        android:background="@android:color/transparent"
         android:onClick="forgotpassword"
         android:text="Olvidó contraseña"
+        android:textAlignment="textEnd"
         android:textColor="@color/white"
         android:textSize="10dp"
         android:textStyle="bold"
-        android:textAlignment="textEnd"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.21"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/btnIrRegister"
         app:layout_constraintTop_toBottomOf="@+id/button4"
         app:layout_constraintVertical_bias="0.0" />
