--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -67,9 +66,9 @@
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="322dp"
+        android:layout_width="match_parent"
         android:layout_height="168dp"
-        android:layout_marginHorizontal="25dp"
+        android:layout_marginHorizontal="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8"
@@ -95,12 +94,12 @@
         android:layout_width="129dp"
         android:layout_height="39dp"
         android:layout_marginTop="10dp"
-        android:background=""
+        android:background="@android:color/transparent"
         android:onClick="sessionClose"
         android:text="Cerrar Session"
+        android:textAlignment="textEnd"
         android:textColor="@color/Azul_marino"
         android:textSize="10dp"
-        android:textAlignment="textEnd"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -113,7 +112,7 @@
         android:id="@+id/btn_rendir_examne"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="45dp"
+        android:layout_marginHorizontal="50dp"
         android:background="@drawable/border_radious"
         android:backgroundTint="@color/white"
         android:text="Rendir Examen"
@@ -127,7 +126,7 @@
         android:id="@+id/btn_rendir_practica"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="45dp"
+        android:layout_marginHorizontal="50dp"
         android:background="@color/white"
         android:text="Rendir Practica"
         android:textColor="@color/Azul_marino"
@@ -140,9 +139,9 @@
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_width="322dp"
+        android:layout_width="match_parent"
         android:layout_height="168dp"
-        android:layout_marginHorizontal="25dp"
+        android:layout_marginHorizontal="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9"
