--- a/app/src/main/res/layout/activity_olvidar_contrasena.xml
+++ b/app/src/main/res/layout/activity_olvidar_contrasena.xml
@@ -27,8 +27,9 @@
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="55dp"
         android:layout_marginTop="35dp"
         android:text="Recuperar cuenta"
         android:textColor="@color/Azul_marino"
@@ -40,8 +41,9 @@
 
     <TextView
         android:id="@+id/textView11"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="55dp"
         android:layout_marginTop="60dp"
         android:text="Ingrese su email para confirmar su identidad."
         android:textColor="@color/gris_oscuro"
@@ -56,7 +58,7 @@
         android:id="@+id/txtForgotPasswordEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="78dp"
+        android:layout_marginHorizontal="55dp"
         android:layout_marginTop="10dp"
         android:ems="10"
         android:hint="email"
@@ -70,7 +72,7 @@
         android:id="@+id/btnForgotMyPassword"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_marginHorizontal="78dp"
+        android:layout_marginHorizontal="55dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/border_radious"
         android:backgroundTint="@color/Azul_marino"
