--- a/app/src/main/res/layout/activity_frame_11.xml
+++ b/app/src/main/res/layout/activity_frame_11.xml
@@ -4,16 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F4FEBA"
+    android:background="@color/white"
     tools:context=".frame_11">
-
 
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_weight="1"
-        android:background="#004242"
+        android:background="@color/Azul_marino"
 
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -76,7 +75,7 @@
         android:id="@+id/cpatras_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="#004242"
+        android:backgroundTint="@color/Azul_marino"
         android:paddingHorizontal="40dp"
         android:paddingVertical="10dp"
 
@@ -95,7 +94,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
-        android:backgroundTint="#004242"
+        android:backgroundTint="@color/Azul_marino"
         android:paddingHorizontal="30dp"
         android:paddingVertical="10dp"
 
